--- a/source/_posts/2012-01-22-106-calories.markdown
+++ b/source/_posts/2012-01-22-106-calories.markdown
@@ -7,7 +7,7 @@ sharing: false
 categories: 
 ---
 
-The lymph node is malignant. This doesn't come surprise, and it is good to have answered the question. Julia, a community care person from St Gemma's Hospice, was able to pull the results and also gave me the name of the oncologist to whom mum's case has been referred. I called the doctor's secretary and left a message. It was late Friday afternoon, so no response until Monday I expect.
+The lymph node is malignant. This doesn't come as a surprise, and it is good to have answered the question. Julia, a community care person from St Gemma's Hospice, was able to pull the results and also gave me the name of the oncologist to whom mum's case has been referred. I called the doctor's secretary and left a message. It was late Friday afternoon, so no response until Monday I expect.
 
 We haven't told mum yet. I have mixed feelings about holding it back, but that's literally all I know - there is evidence of malignancy. Everything else is conjecture based on previous conversations and assumptions I'm making. And I'm acutely aware reading back over this account that I've misinterpreted evidence previously. I'd hate to misrepresent anything, even if it's likely that mum wouldn't remember what I'd told her. So I'll wait for the conversation with the oncologist.
 
