--- a/source/_posts/2012-02-12-bow-shock.markdown
+++ b/source/_posts/2012-02-12-bow-shock.markdown
@@ -19,7 +19,7 @@ After the first few days of internal torture, a new kind of guilt-laden normalit
 
 ![Stomping Boots](http://farm8.staticflickr.com/7144/6820380029_9fc26a833f_z.jpg)
 
-Sunday was a dark day for my soul, sitting and waiting to fly (2140 flight), watching Moon on Netflix, snuggling with Grace on the sofa, feeling like I might not be back for some time. Having felt so wrong about being home at the start of the week, by the time I left I didn't want to go. Not that this isn't where I need to be. Just… well, it doesn't have to make sense.
+Sunday was a dark day for my soul, sitting and waiting to fly (2140 flight), watching Moon on Netflix, snuggling with Grace and Rachel on the sofa, feeling like I might not be back for some time. Having felt so wrong about being home at the start of the week, by the time I left I didn't want to go. Not that this isn't where I need to be. Just… well, it doesn't have to make sense.
 
 So now I've been back a week, and things are moving quickly. Mum is dopey and increasingly confused. She can't hold her weight on her legs any more, so getting out of bed is out of the question really. She has the means to go potty without moving, but she doesn't _believe_ it, and when she finally does, she _hates_ the idea. And since she forgets, we have a little routine every few minutes where she tells us she's really going to have to go to the toilet, and we tell her about her magic pants. She laughs, comprehends, recoils, and on we go.
 
