--- a/source/_posts/2012-02-16-d.markdown
+++ b/source/_posts/2012-02-16-d.markdown
@@ -9,4 +9,4 @@ categories:
 
 Eveline Hazel Irving (née Hunter), born 1st January 1931, died shortly after 4am on 16th February 2012.
 
-Rest in Peace, sweet heart, and thank you.
+Rest in peace, sweet heart. Thank you for everything.
